<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainFragment"
    android:orientation="vertical"
    android:clickable="true">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:onClick="startButtonClick">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/temp_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTempNotif"
                android:textSize="8pt"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|left|center|right"
                android:background="@drawable/car_background"
                android:layout_weight="1"
                android:id="@+id/imageLayout"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/timerDefault"
                android:id="@+id/tvTimer"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textSize="14pt" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:ems="10"
                    android:id="@+id/etPhone"
                    android:hint="@string/hintPhoneEditText"
                    android:layout_margin="5dp"
                    android:phoneNumber="true"
                    android:layout_weight="1"
                    android:textSize="8pt" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/StartEngine"
                    android:id="@+id/bStartEngine"
                    android:layout_gravity="left"
                    android:background="@drawable/button_selector"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="5dp"
                    android:onClick="startButtonClick"
                    android:textSize="10pt"
                    android:layout_marginBottom="5dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/StopEngine"
                    android:id="@+id/bStopEngine"
                    android:layout_gravity="right"
                    android:background="@drawable/button_selector"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="2dp"
                    android:onClick="stopButtonClick"
                    android:textSize="10pt"
                    android:layout_marginBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ActivateDevice"
                    android:id="@+id/bActivateDevice"
                    android:background="@drawable/button_selector"
                    android:onClick="activateButtonClick"
                    android:textSize="10pt"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="5dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ResetDevice"
                    android:id="@+id/bResetDevice"
                    android:background="@drawable/button_selector"
                    android:onClick="resetButtonClick"
                    android:textSize="10pt"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
